updates improving the mai order response.. spec improvements... moved the password code into its own method..
